--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -947,7 +947,7 @@
 /* Banner */
 
 	#banner {
-		background: #CCE8F4 url('../../images/pic01.jpg');
+		background: #CCE8F4 url('../../images/Jason_Kopacz.jpeg');
 		background-position: center center;
 		background-size: auto 100%;
 		background-repeat: no-repeat;
