--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2233,10 +2233,8 @@ input, select, textarea {
 				width: 293px;
 				height: 293px;
 				border-radius: 50%;
-				position: absolute;
 				z-index: 1;
-				top: 0em;
-				left: 1em;
+				margin: 0 auto;
 			}
 
 /* Intro */
